# MAVSDK-Tutorial

./: README.md
1-getsystem/: CMakeLists.txt  getsystem.cpp  getsystem.py
takeoff_and_land/: my_first1.cpp
